--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
+
   <head>
-	<title>Test</title>
+
+	<title></title>
+  
   </head>
+
   <body>
+
   <h1>Hello?</h1>
+
   </body>
+
 </html>
