--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
+
 <html>
 
   <head>
-
-	<title></title>
-  
+	   <title>This is a title!</title>
   </head>
 
   <body>
-
-  <h1>Hello?</h1>
-
+    <h1>Hello?</h1>
+    <dl>
+      <dt>One</dt>
+      <dt>Two</dt>
+    </dl>
   </body>
 
 </html>
