--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <body>
     <h1>Hello?</h1>
-    <dl>
-      <dt>One</dt>
-      <dt>Two</dt>
-    </dl>
+    <ul>
+      <li>One</li>
+      <li>Two</li>
+    </ul>
   </body>
 
 </html>
