--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 
   <head>
-	   <title>This is a title!</title>
+	   <title>This is a title + icon</title>
+     <link rel="icon" href="https://github.com/JaggerFifield/website-master.git/pgicon.png">
   </head>
 
   <body>
