--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
 	   <title>This is a title + icon</title>
-     <link rel="icon" href="https://github.com/JaggerFifield/website-master.git/pgicon.png">
+     <link rel="icon" type="image/png" href="favicon/favicon32x32.png">
   </head>
 
   <body>
