One last change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
 	   <title>This is a title + icon</title>
-     <link rel="icon" type="image/png" href="favicon/favicon32x32.png">
+     <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
   </head>
 
   <body>
