--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
       <li>One</li>
       <li>Two</li>
-      <a href="Three">https://jjf0197.github.io/empty</a>
+      <li><a href="Three">https://jjf0197.github.io/empty.html</a></li>
     </ul>
   </body>
 
