--- a/Photo.html
+++ b/Photo.html
@@ -2,12 +2,13 @@
 
 <html>
 
-	<head>
-		<title>This is an image</title>
-	</head>
+  <head>
+    <title>This is an image</title>
+    <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
+  </head>
 	
-	<body>
-		<img src="pictures/ice.JPG" alt="Ice">
-	</body>
+  <body>
+    <img src="pictures/ice.JPG" alt="Ice">
+  </body>
 
 </html>
