--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
+<! Double Space Indents>
+
 <html>
 
   <head>
-	   <title>This is a title + icon</title>
-     <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
+    <title>This is a title + icon</title>
+    <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
   </head>
 
   <body>
