--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Hello?</h1>
     <ul>
       <li>One</li>
-      <li>Two</li>
+      <li><a href="photo.html">Two</li>
       <li><a href="empty.html">Three</a></li>
     </ul>
   </body>
