--- a/template.html
+++ b/template.html
@@ -4,6 +4,15 @@
 <html>
 
   <head>
+  
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TT2KDPZ');</script>
+<!-- End Google Tag Manager -->
+  
     <title>This is a title + icon</title>
     <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
   </head>
