--- a/calculus/unitOne.html
+++ b/calculus/unitOne.html
@@ -37,27 +37,20 @@ a.two:hover {color: #999999 }
 </style>
 
   <head>
-    <title>Math</title>
-    <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
+    <title>Calc: Unit One</title>
+    <!--Icon NOT working-->
+    <link rel="icon" type="image/png" href="../favicon/favicon32x32.png" sizes="32x32" />
   </head>
 
   <header>
         <h1 style="font-family:courier;">
-          <a class="two" href="index.html"><</a>
-          <a class="two" href="index.html">J-Net</a>
+            <a class="two" href="../calculus.html"><</a>
+          <a class="two" href="index.html">J-Net</a class="two">
         </h1>
-        <nav>
-          <h2 style="font-family:courier;">
-            <a class="one" href="calculus.html">Calculus</a>
-            <a class="one" href="empty.html">30-1 </a>
-            <a class="one" href="empty.html">20-1</a>
-            <a class="one" href="empty.html">10C</a>
-          </h2>
-        </nav>
-
   </header>
 
   <body>
+      <h1>Unit One: Pre-Calc</h1>
   </body>
 
 </html>
