--- a/index.html
+++ b/index.html
@@ -37,15 +37,6 @@ a.two:hover {color: #999999 }
 </style>
 
   <head>
-  
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TT2KDPZ');</script>
-<!-- End Google Tag Manager -->
-  
     <title>This is a title + icon</title>
     <link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
   </head>
@@ -58,19 +49,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h2 style="font-family:courier;">
             <a class="one" href="math.html">Math</a>
 
-            <a class="one" href="photo.html">Photo</a>
+            <a class="one" href="empty.html">Science</a>
+
+            <a class="one" href="empty.html">Index</a>
           </h2>
         </nav>
   </header>
 
   <body>
-    <hr>
-    <h1>Hello?</h1>
-    <ul>
-      <li>One</li>
-      <li><a href="photo.html">Two</li>
-      <li><a href="empty.html">Three</a></li>
-    </ul>
   </body>
 
 </html>
