--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ a.one:link, a.one:visited {
 a.one:hover, a.one:active {background-color: blue;}
 
 a.two {text-decoration: none;}
-a.two:link, a.two:visited {color: #ffffff}
+a.two:link, a.two:visited {
+  color: #ffffff;
+  padding: 5px 5px;}
 a.two:hover {color: #999999 }
 
 </style>
