--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@ a.one:link, a.one:visited {
 
 a.one:hover, a.one:active {background-color: blue;}
 
-a.two {text-decoration: none;}
 a.two:link, a.two:visited {
   color: #ffffff;
-  padding: 5px 5px;}
+  padding: 50px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  }
 a.two:hover {color: #999999 }
 
 </style>
