--- a/na.html
+++ b/na.html
@@ -1,4 +1,4 @@
 <span>
-<iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/UBZ7bwZ5cp?autoplay=0" frameborder="0" width="720" height="576"></iframe>
-<iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/FZUuyWWkkX?autoplay=0" frameborder="0" width="720" height="576"></iframe>
+<iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/UBZ7bwZ5cp?autoplay=0" frameborder="0" style="width:60%;height:60%"></iframe>
+<iframe allowfullscreen webkitallowfullscreen mozallowfullscreen src="https://video.nest.com/embedded/live/FZUuyWWkkX?autoplay=0" frameborder="0" style="width:60%;height:60%"></iframe>
 </span>
