--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 Webpage redesign in progress!
 </h1>
 <p class="para">
-This website is still being developed and is not intended to be used publicly. It is a collection of what the author finds interesting or wants to document. It is also a learning experiance, helping me to develop HTML documents. It may be pointless, but it is MY pointless.
+This website is still being developed and is not intended to be used. It is a collection of what the author finds interesting or wants to document. It is also a learning experiance, helping me to develop HTML documents. It may be pointless, but it is MY pointless.
 </p>
 <br></br>
 <h1 class="container">
