--- a/TEMP.html
+++ b/TEMP.html
@@ -1,3 +1,12 @@
-<audio controls>
-  <source src="audio.mp3" type="audio/mpeg">
-</audio>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Audio</title>
+  </head>
+  
+  <body>
+    <audio controls>
+      <source src="audio.mp3" type="audio/mpeg">
+    </audio>
+  </body>
+</html>
