--- a/index.html
+++ b/index.html
@@ -103,5 +103,18 @@ Is this better than the old webpage?
 ☺ 2020 Jagger Fifield
 </p>
 
+<footer>
+
+	<div class="copyright">&copy; <span itemprop="copyrightYear">2019</span>
+                    <span class="with-love" id="animate">
+    <i class="fa fa-user"></i>
+  </span>
+                    <span class="author" itemprop="copyrightHolder"></span>
+
+                </div>
+
+            </div>
+        </footer>
+
 </body>
 </html>
