--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 </style>
 
 <title> JN | Home </title>
-<link rel="icon" type="image/png" href="favicon/favicon32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="assets/favicon/favicon32x32.png" sizes="32x32" />
 
 <body class="bgc">
 
 <div class="container">
-	<img src="pictures/banner.jpg" alt="banner" style="width:100%;" title="banner">
+	<img src="assets/pictures/banner.jpg" alt="banner" style="width:100%;" title="banner">
 	<div class="centered"><h1>Jagger Fifield</h1></div>
 </div>
 
@@ -72,7 +72,7 @@
 		
 		<a class="list" href="empty.html">Empty</a>
 		
-		<a class="list" href="index_old.html">Old</a>
+		<a class="list" href="archive/index_old.html">Old</a>
 	</h2>
 </nav>
 <hr></hr>
@@ -89,7 +89,7 @@ Hello there:
 </h1>
 <p class="para">
 Test: One, Two, Three
-<a href="na.html">.</a>
+<a href="archive/na.html">.</a>
 Is this better than the old webpage?
 </p>
 
