--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <nav style="width:100%;text-align: center;">
 	<h2 style="font-family:courier;">
-		<a class="list" href="docs/_site/index.html">Test</a>
+		<a class="list" href="./blog">Test</a>
            
 		<a class="list" href="empty.html">Empty</a>
 
