--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<h2 style="font-family:courier;">
 		<a class="list" href="docs/_site">Test</a>
            
-		<a class="list" href="empty.html">Empty</a>
+		<a class="list" href="RTS/rts.html">RTS</a>
 
 		<a class="list" href="empty.html">Empty</a>
 		
