--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 <nav style="width:100%;text-align: center;">
 	<h2 style="font-family:courier;">
-		<a class="list" href="./blog">Test</a>
+		<a class="list" href="docs/_site">Test</a>
            
-		<a class="list" href="empty.html">Empty</a>
+		<a class="list" href="RTS/rts.html">RTS</a>
 
 		<a class="list" href="empty.html">Empty</a>
 		
