Playing around with canvas and webGL

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
 		<meta charset="UTF-8">
 
 		<!--Import the styles-->
-		<link rel="stylesheet" type="text/css" href='./style.css'>
-		<link rel="stylesheet" type="text/css" href='../style.css'>
+		<link rel="stylesheet" type="text/css" href='./assets/style.css'>
 
 		<!--Update the variables-->	
-		<script type="text/javascript" src="./vars.js"></script>
-		<script type="text/javascript" src="../vars.js"></script>
+		<script type="text/javascript" src="./assets/vars.js"></script>
 		<script type="text/javascript">
 			window.onload = function(){
 				//Apply all updates to the html
@@ -23,72 +21,36 @@
 
 		<!--Set tab title and icon-->
 		<title> JN | Home </title>
-		<link rel="icon" type="image/png" href="assets/favicon/favicon32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="./assets/favicon/favicon32x32.png" sizes="32x32" />
 	</head>
 
 	<body>
 
 		<!--The Main Header-->
 		<div id='header'>
-			<img src="assets/pictures/banner.jpg">
+			<img src="./assets/pictures/banner.jpg">
 				<div class = 'centered'>
-					<a class='box' href="./index.html">&nbsp;Jagger Fifield&nbsp;</a>
+					<a class='box'>&nbsp;Jagger Fifield&nbsp;</a>
 				</div>
 			</img>
 		</div>
 
 		<nav style="width:100%;text-align: center;">
 			<h2 style="font-family:courier;">
-				<a class="list" href="./index.html">About</a>
+				<a class="list" href="./">About</a>
 
-				<a class="list" href="./index.html">News</a>
+				<a class="list" href="./frame.html">Frame</a>
 
-				<a class="list" href="./index.html">Coding</a>
+				<a class="list" href="./">Coding</a>
 
-				<a class="list" href="./index.html">Gaming</a>
+				<a class="list" href="./">Gaming</a>
 
-				<a class="list" href="./index.html">Graphics</a>
+				<a class="list" href="./">Graphics</a>
 				
-				<a class="list" href="archive/index_old.html">Old</a>
+				<a class="list" href="./archive/index_old.html">Old</a>
 			</h2>
 		</nav>
 
-		<hr>
-
-		<div class='block'>
-			<h1>
-				Yet another update.
-			</h1>
-			<p>
-				This time, see the site become restructured. Adding a css file to store all the styles and scripts to automate redundant data! But that's not all, new catagories have been added for any future news that may or may not happen. 
-			</p>
-			<p>
-				Is this the only update for another decade? Find out soon on Jagger's outdated website web series!
-			</p>
-		</div>
-
-		<hr>
-
-		<div class='block'>
-			<h1>
-			Webpage redesign in progress!
-			</h1>
-			<p>
-			This website is still being developed and is not intended to be used. It is a collection of what the author finds interesting or wants to document. It is also a learning experiance, helping me to develop HTML documents. It may be pointless, but it is MY pointless.
-			</p>
-		</div>
-
-		<hr>
-
-		<div class='block'>
-			<h1>
-				Hello there:
-			</h1>
-			<p>
-				Test: One, Two, Three<a class='hyper' href="archive/na.html">.</a>Is this better than the old webpage?
-			</p>
-		</div>
-		
 		<hr>
 
 		<!--Coding Activity Widget-->
