--- a/frame.html
+++ b/frame.html
@@ -9,7 +9,7 @@
 
 	</head>
 
-	<body style="overflow: hidden; margin: 0px;">
+	<body style="overflow: hidden; margin: 0;">
 
 	<script language="javascript" src="./framed.js"></script>
 	
