Added a new page for image processing.

--- a/frame.html
+++ b/frame.html
@@ -3,15 +3,31 @@
 	<head>
 		<!--Set the encoding-->
 		<meta charset="UTF-8">
+		
+		<!--Import the styles-->
+		<link rel="stylesheet" type="text/css" href='./assets/style.css'>
+        <link href="https://fonts.googleapis.com/css?family=Noto%20Sans%20Mono" rel="stylesheet">
 
 		<!--Set the tab title-->
 		<title>Frame Test</title>
 
 	</head>
 
-	<body style="overflow: hidden; margin: 0;">
+	<body style="overflow: hidden; margin: 0;background-color: #3b4252;">
 
-	<script language="javascript" src="./framed.js"></script>
+	<!--The Main Header-->
+        <div style="text-align: center;background-color: #5e81ac;margin-bottom: 0;">
+        	<p style="font-family: Noto Sans Mono,serif;font-size: 80px;margin: 20px;margin-bottom:0px;padding: 10px;color: #2e3440">&nbsp;Jagger Fifield&nbsp;</p>
+        </div>
+
+		<!--The nav bar-->
+		<div style="background-color: #D8Dee9;height:44px;text-align:center;line-height:44px">
+			<a class="nav_button" href="index.html" title="Home page">Home</a>
+			<a class="nav_button_active" href="frame.html" title="Frame test">Canvas Test</a>
+			<a class="nav_button" href="image.html" title="Image processing">Image</a>
+		</div>
+
+		<script language="javascript" src="./framed.js"></script>
 	
 	</body>
 
